--- a/src/modules/85-cv/components/ExecutionVerification/components/DeploymentMetrics/components/DeploymentAccordionPanel/components/NodesCount.module.scss
+++ b/src/modules/85-cv/components/ExecutionVerification/components/DeploymentMetrics/components/DeploymentAccordionPanel/components/NodesCount.module.scss
@@ -7,11 +7,6 @@
 
 $nodeCountDisplaySize: 25px;
 
-.nodeCount {
-  align-items: center;
-  flex-wrap: wrap;
-}
-
 .nodeCountDisplay {
   --backgroundColor: var(--grey-400);
   background: var(--backgroundColor) !important;
